# ray-tracer

./: .gitignore  README.md
include/: bounds.h  camera.h  canvas.h  colour.h  cone.h  cube.h  cylinder.h  disc.h  group.h  hemisphere.h  material.h  matrix.h  pattern.h  plane.h  porous-sheet.h  projectile.h  ray.h  shape.h  sheet.h  space.h  sphere.h  transformations.h  tuple.h  types.h  utils.h  world.h
scripts/: CMakeLists.txt  blended-pattern-ppm.cc  bvh-test.cc  camera-ppm.cc  camera-with-planes-ppm.cc  clockface-ppm.cc  cups.cc  eggscape.cc  flags.cc  getting-started.cc  glass-marble-ppm.cc  hemisphere-test.cc  landscape-ppm.cc  nested-pattern-ppm.cc  overlapping-spheres-ppm.cc  pattern-test-ppm.cc  pill-bottle-ppm.cc  planets.cc  pond-ppm.cc  porous-sheet-example-1.cc  porous-sheet-example-2.cc  porous-sheet-test.cc  rock.cc  rocks.cc  room-ppm.cc  scripts.h  shaded-spheres-ppm.cc  sheets-ppm.cc  sphere-ppm.cc  will-o-wisps.cc
scripts/challenges/: CMakeLists.txt  bonus-bvh.cc  challenges.h  chapter-01-projectile-csv.cc  chapter-02-projectile-ppm.cc  chapter-04-clock.cc  chapter-05-sphere.cc  chapter-06-shading.cc  chapter-07-scene.cc  chapter-07-scene.h  chapter-09-hexagon.cc  chapter-09-planes.cc  chapter-09-submerged-blobs.cc  chapter-10-blended-pattern.cc  chapter-10-nested-pattern.cc  chapter-10-perturbed-pattern.cc  chapter-11-fresnel.cc  chapter-11-pond.cc  chapter-11-reflections.cc  chapter-11-refraction.cc  chapter-12-room.cc  chapter-13-cones.cc  chapter-13-cylinder.cc  chapter-13-cylinders.cc  chapter-14-groups.cc
src/: bounds.cc  camera.cc  canvas.cc  colour.cc  cone.cc  cube.cc  cylinder.cc  disc.cc  group.cc  hemisphere.cc  material.cc  matrix.cc  pattern.cc  plane.cc  plot-projectile.cc  porous-sheet.cc  projectile.cc  shape.cc  sheet.cc  space.cc  sphere.cc  transformations.cc  tuple.cc  types.cc  utils.cc  world.cc
test/: CMakeLists.txt  bounds.cc  camera.cc  canvas.cc  colour.cc  cone.cc  cube.cc  cylinder.cc  disc.cc  group.cc  hemisphere.cc  intersections.cc  material.cc  matrix.cc  pattern.cc  plane.cc  ray.cc  run-all  shape.cc  sheet.cc  space.cc  sphere.cc  transformations.cc  tuple.cc  types.cc  utils.cc  world.cc
